Deployment/Deploymentset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
      tier: frontend
      app: nginx
spec:
  selector:
    matchLabels:
      env: production
  replicas: 3
  template:
    metadata:
      name: myapp
      labels:
          env: production
    spec:
      containers:
        - name: nginx
          image: nginx
