Deployment/IngressController.yml
apiVersion: extensions/v1beta1 
kind: Deployment
metadata:
  name: nginx-ingress-controller 
spec:
  replicas: 1 
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels:
        name: nginx-ingress 
    spec:
      containers:
      - name: nginx-ingress-controller
        image: quay.io/kubernetes-ingress- controller/nginx-ingress-controller:0.21.0
        args: 
        - /nginx-ingress-controllerKodeKloud.com
        - --configmap=$(POD_NAMESPACE)/nginx-configuration
      ports:
      - name: http
        containerPort: 80 
      - name: https
        containerPort: 443


    #########
---
apiVersion: v1 
kind: Service 
metadata:
  name: nginx-ingress 
  spec:
  type: NodePort 
  ports:
  - port: 80
    targetPort: 80 
    protocol: TCP 
    name: http
  - port: 443 
    targetPort: 443 
    protocol: TCP 
    name: https
selector:
  name: nginx-ingress

---
#ingress resource

apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: ingress-wear 
spec:
  backend:
    serviceName: wear-service 
    servicePort: 80

---
# resource with rule

apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: ingress-wear 
spec:
  backend:
    serviceName: wear-service 
    servicePort: 80
  rules: 
  - http:
    paths:
    - path: /wear
      backend:
        serviceName: watch-service 
        servicePort: 80
    - path: /watch
      backend:
        serviceName: watch-service 
        servicePort: 80
